feat: Implement S3 document management, and initial legal case handling with multipart attachment support.